# sendspin-webos

./: .eslintrc.json  .gitignore  README.md  appinfo.json  index.html  package-ipk.sh  package-lock.json  package.json  sendspin-lib.js
.claude/skills/deploy-tv/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: AUDIO-CONCURRENCY.md  IMPROVEMENTS.md  PROGRESS-IMPROVEMENTS.md  PROGRESS.md  background-daemon-ipk-plan.md  easy-config-plan.md
native/audio-helper/: CMakeLists.txt  README.md  audio_helper.c
scripts/: check-ids.sh  deploy-tv.sh  uninstall-tv.sh
services/com.sendspin.cinema.service/: build-core.mjs  build.sh  config-http.js  gst-sink.js  ma-login.js  mdns-discover.js  package.json  persist.js  sendspin-core.js  service.js  services.json  smoke-test.js  test-real-sink.js
services/com.sendspin.cinema.service/src/: gst-audio-processor.mjs
services/com.sendspin.webos.service/: .gitignore  build-core.mjs  config-http.js  node-env.js  package.json  sendspin-core.js  service.js  services.json  util.js
test/: config-http.test.js  util.test.js
